bugfix: map overflow scroll

--- a/src/App.scss
+++ b/src/App.scss
@@ -64,11 +64,6 @@ html {
   height: calc(100% - 48px);
 }
 
-.app-content > div{
-  overflow: scroll;
-  height: 100%;
-}
-
 .app-navigation {
   box-shadow: 0 0 7px #ccc;
   position: fixed;
